Ozhaev Zaynudin Game.cpp.g++log.txt
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp: In function 'void MoveBall()':
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:173:9: error: expected ';' before 'if'
         if (i >= 7) i = 0;
         ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp: In function 'void CollisionBall(Ball*, Ball*)':
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:321:48: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
      double d = sqrt (Dx*Dx + Dy*Dy); if (d == 0) d = 0.01; // гипотенуза
                                                ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:332:28: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
         if ((Vn1 - Vn2) == 0) Vn1 = Vn1 + 0.01;
                            ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:346:44: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
         d = sqrt (Dx*Dx + Dy*Dy); if (d == 0) d = 0.01;
                                            ^
---------------------------------------------------------------------------------------------
[05.07.2021  0:50:42,63 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\Game> g++.exe "C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp" -o "C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
